Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107188

Reg: Behavior Change: Modal dialogs seem to block events to other dialogs/widget

    XMLWordPrintable

Details

    • All
    • cdadd1bdb3 (qt/qtbase/dev) a1ba8b726e (qt/qtbase/6.4) a1ba8b726e (qt/tqtc-qtbase/6.4) b02fe23df9 (qt/tqtc-qtbase/6.2)

    Description

      Modal dialogs seem to block events to other dialogs/windows. This is totally different behavior from Qt5.

      In attached example when a modal dialog is shown in a slot and when another slot is used to close the dialog against push button click, expected behavior is it will show a new dialog and close the current dialog but it turns out that it always show a new modal dialog.

      Strangely this behavior is seen in all Qt6 version except 6.2.4

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vhilshei Volker Hilsheimer
              irfan.omair@digia.com Irfan Omair
              Votes:
              2 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes